--- a/css/styles.css
+++ b/css/styles.css
@@ -6631,6 +6631,7 @@ fieldset:disabled .btn {
 
 .carousel {
   position: relative;
+  padding-top: 0.8rem;
 }
 
 .carousel.pointer-event {
@@ -12759,7 +12760,7 @@ p {
 }
 
 header.masthead {
-  padding-top: 20.5rem;
+  padding-top: 30.5rem;
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
@@ -12788,8 +12789,9 @@ header.masthead .masthead-heading {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 17rem;
-    padding-bottom: 12.5rem;
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+    background-color: #f0f0f0;
   }
 
   header.masthead .masthead-subheading {
@@ -13246,7 +13248,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .navbar-mision .navbar-brand img {
-  height: 50px;
+  height: 100px;
 }
 
 @media (max-width: 992px) {
